# Falcon

./: CMakeLists.txt  Makefile  README.md  README.txt  codec.c  common.c  config.h  falcon.c  falcon.h  fft.c  fpr.h  gtest_falcon.cpp  inner.h  keygen.c  rng.c  rng.h  shake.c  sign.c  speed.c  test_falcon.c  vrfy.c
.github/workflows/: tests.yml
cmake/: GTest.cmake
